# oculante

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Cross.toml  LICENSE  PKGBUILD  README.md  build.rs  build_deps_linux.sh  build_deps_win.bat  build_mac.sh  build_netbsd.sh  create_release.sh  fonts.sh  plan.md  setup_ext_libs.sh  testing.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_next.yaml
.github/workflows/: arm7.yml  build_checks.yml  check_arm7.yml  check_macos.yaml  check_netbsd_default_features.yml  check_netbsd_minimal.yml  check_osx.yml  check_run_tests.yml  check_ubuntu_no_default_features.yml  check_windows.yml  net2.yml  netbsd.yml  netbsd_full.yml  netbsd_minimal.yml  osx.yml  release.yml  rust-clippy.yml  rust.yml  test_notarize.yml  ubuntu.yml  windows.yml
benches/: load_large_jpg.bench  load_large_png.bench  my_benchmark.rs
egui-modal-diag/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
egui-modal-diag/examples/: example.rs
egui-modal-diag/src/: lib.rs  modal.rs
res/: banner.avif  info.plist  oculante.desktop  pkgbuild
res/flathub/: io.github.woelper.Oculante.desktop  io.github.woelper.Oculante.metainfo.xml
res/fonts/: generate_icons.sh
res/icons/: icon-circle.avif  icon-square.avif  icon.avif
res/previews/: flipbook.avif
scripts/: build_deps_linux.sh  build_deps_win.bat  build_mac.sh  create-extra-tests.sh  create_release.sh  setup_ext_libs.sh
src/: app.rs  appstate.rs  cache.rs  comparelist.rs  file_encoder.rs  filebrowser.rs  glow_renderer.rs  histogram.rs  icons.rs  image_editing.rs  image_loader.rs  input.rs  lib.rs  mac.rs  main.rs  net.rs  paint.rs  scrubber.rs  settings.rs  shortcuts.rs  support.rs  tests.rs  texture_wrapper.rs  thumbnails.rs  ui.rs  update.rs  utils.rs  window_config.rs
src/ktx2_loader/: image.rs  image_loader.rs  image_texture_conversion.rs  ktx2.rs  mod.rs
src/texture/: image.rs  image_texture_conversion.rs  ktx2.rs  mod.rs
src/ui/: edit_ui.rs  info_ui.rs  mod.rs  palette_ui.rs  settings_ui.rs  theme.rs  thumbnail_rendering.rs  top_bar.rs
tests/: 512x512_float.exr  600x300_float.exr  600x600_float.exr  create-extra-tests.sh  exrtest_half.exr  gradient_mesh.jxl  jxl-art1.jxl  jxl-art2.jxl  jxl-art3.jxl  orange.heic  test.dds  test.exr  test.jp2  test.jxl  test.psd  test_512x512_R16G16B16A16_SFLOAT.ktx2  test_600x300_R32G32B32A32_SFLOAT.ktx2  test_R16G16B16A16_SFLOAT.ktx2  test_R16G16B16_SFLOAT.ktx2  test_R8G8B8A8_SRGB.ktx2  test_R8G8B8_SRGB.ktx2
