[package]
authors = ["Johann Woelper <woelper@gmail.com>"]
description = "A minimalistic image viewer with analysis and editing tools"
edition = "2021"
exclude = ["res/*.gif", "tests/*", "res/screenshots/*", "res/previews/*"]
keywords = ["graphics", "image", "viewer"]
license = "MIT"
name = "oculante"
readme = "README.md"
repository = "https://github.com/woelper/oculante/"
version = "0.9.1"

[package.metadata.bundle]
icon = ["icon.ico"]
identifier = "com.github.woelper.oculante"
name = "oculante"

[dependencies]
anyhow = "1.0"
arboard = { version = "3.2", features = ["wayland-data-control"] }
avif-decode = { version = "1.0", optional = true }
clap = "3.2"
dds-rs = "0.7"
dirs = "5.0"
env_logger = "0.11"
evalexpr = "11.3"
exr = "1.72"
fast_image_resize = "5.0"
gif = "0.13.1"
gif-dispose = "5.0.1"
image = { version = "0.25.4", features = ["hdr"] }
kamadak-exif = "0.5"
lexical-sort = "0.3"
libavif-image = { version = "0.14", optional = true }
log = "0.4"
nalgebra = "0.33"
notan = { version = "0.12", default-features = false, features = [
    "backend",
    "draw",
    "drop_files",
    "egui",
] }
egui_plot = "0.27"
palette = "0.7"
psd = "0.3"
quickraw = "0.1.6"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.7"
# the next 3 belong together
resvg = "0.42.0"
tiny-skia = "0.11.4"
usvg = "0.42.0"
rfd = { version = "0.14", optional = true }
rgb = "0.8"
self_update = { version = "0.41", default-features = false, features = [
    "rustls",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
turbojpeg = { version = "1.1.0", optional = true }
webbrowser = "1.0"
tiff = "0.9"
jxl-oxide = "0.8"
zune-png = "0.5.0-rc1"
img-parts = "0.3"
dark-light = "1.0"
trash = "5.0"
lutgen = { version = "0.10.0", features = ["lutgen-palettes"] }
libheif-rs = { version = "1.0", default-features = false, optional = true }
egui-notify = "0.14"
ktx2 = "0.3.0"
thiserror = "1.0.51"
bitflags = "2.4.1"
flate2 = "1.0.28"
wgpu = "22" # for ktx
ruzstd = "0.7" # for ktx
basis-universal = "0.3.1"
mouse_position = "0.1.3"
webp-animation = { version = "0.9.0", features = ["static"] }
fluent-uri = "0.1.4"
imageproc = { version = "0.25", features = ["rayon"] }
num-traits = "0.2.18"
zerocopy = "0.7.34"
icns = "0.3.1"
jpeg2k = { version = "0.9", optional = true, default-features = false, features = [
    "threads",
    "file-io",
    "openjpeg-sys",
] }
file-format = "0.25.0"
egui_extras = { version = "0.27.2", features = ["image", "file"] }
libblur = "0.13.5"
egui-modal = "0.3.6"

[features]
default = [
    "turbo",
    "avif_native",
    "update",
    "notan/glsl-to-spirv",
    "j2k",
    "jxlcms",
]
heif = ["libheif-rs"]
avif_native = ["avif-decode"]
dav1d = ["libavif-image"]
file_open = ["rfd"]
turbo = ["turbojpeg"]
update = ["self_update"]
j2k = ["jpeg2k"]
jxlcms = ["jxl-oxide/lcms2"]


[target.'cfg(target_os = "macos")'.dependencies]
fruitbasket = "0.10.0"


[target.'cfg(windows)'.build-dependencies]
# this currently causes a link error LNK1356, check in the future if the problem was solved
windres = "0.2"

[build-dependencies]
env_logger = "0.11"
log = "0.4.14"
winres = "0.1"
cc = "1.0.46"
cmake = "0.1"

[dev-dependencies]
cmd_lib = "1.3.0"
xmltree = "0.11.0"
chrono = "0.4.38"

[profile.release]
codegen-units = 1
# incremental = false
lto = true
strip = true
opt-level = 3
panic = "abort"

[profile.dev]
debug = false
incremental = true
opt-level = 1
