[package]
authors = ["Johann Woelper <woelper@gmail.com>"]
description = "A minimalistic image viewer with analysis and editing tools"
edition = "2021"
exclude = [
    ".github/*",
    "res/fonts/NotoSansSC-Regular.ttf",
    "res/icons/*",
    "res/*.svg",
    "res/premult.png",
    "res/screen*.png",
    "res/*.avif",
    "res/*.gif",
    "tests/*",
    "res/screenshots/*",
    "res/previews/*",
]
keywords = ["graphics", "image", "viewer"]
license = "MIT"
name = "oculante"
readme = "README.md"
repository = "https://github.com/woelper/oculante/"
version = "0.9.2"

[package.metadata.bundle]
icon = ["icon.ico"]
identifier = "com.github.woelper.oculante"
name = "oculante"

[dependencies]
env_logger = "0.11"
notan = { version = "0.13", default-features = false, features = [
    "backend",
    "draw",
    "drop_files",
    "egui",
    "clipboard",
] }
# === EGUI
#  These need to match the egui version used in notan and can't be
# updated unless notan updates egui.
egui_plot = "0.31"
egui-notify = "0.19"
egui_extras = { version = "0.31", features = ["image", "file"] }

# === IMAGE FORMATS
avif-decode = { version = "1.0", optional = true }
turbojpeg = { version = "1.2", optional = true }
psd = "0.3"
quickraw = "0.1.6"
tiff = "0.9"
jxl-oxide = "0.8"
zune-png = "0.5.0-rc1" # upgrade if https://github.com/etemesi254/zune-image/issues/210 is solved
# These 3 need to be updated together
resvg = "0.44"
tiny-skia = "0.11"
usvg = "0.44"
libheif-rs = { version = "2", default-features = false, features = ["v1_19"], optional = true }
ktx2 = "0.3.0"
basis-universal = "0.3"
dds-rs = "0.7"
exr = "1.73"
gif = "0.13.1"
image = { version = "0.25.5", features = ["hdr"] }
jpeg2k = { version = "0.9", optional = true, default-features = false, features = [
    "threads",
    "file-io",
    "openjpeg-sys",
] }
icns = "0.3.1"
webp-animation = { version = "0.9.0", features = ["static"] }
# dicom needs to be the same version
dicom-pixeldata = { version = "0.8", features = ["image"] }
dicom-object = "0.8"
libavif-image = { version = "0.14", optional = true }
gif-dispose = "5.0.1"

# === FILTER CRATES
palette = "0.7"
lutgen = { version = "0.11", features = ["lutgen-palettes"] }
quantette = { version = "0.3.0", features = ["threads"] }
ase-swatch = "0.1.0"
libblur = "0.14"
imageproc = { version = "0.25", features = ["rayon"] }
evalexpr = "12"
fast_image_resize = { version = "5.1", features = ["rayon"] }

# APP FUNCTIONALITY CRATES
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
rfd = { version = "0.14", optional = true }
rgb = "0.8"
self_update = { version = "0.41", default-features = false, features = [
    "rustls",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
webbrowser = "1.0"
thiserror = "1.0.51"

img-parts = "0.3" # for exif saving
dark-light = "2.0"
trash = "5.2"
flate2 = "1.0" # for KTX
bitflags = "2.8" # for KTX
wgpu = "22" # for KTX
ruzstd = "0.8" # for KTX
mouse_position = "0.1.4"
file-format = "0.26"
zip = "2.2"
sysinfo = "0.33.1"
unicode-segmentation = "1.12.0"
font-kit = "0.14"
open = "5.3"
kamadak-exif = "0.6"
lexical-sort = "0.3"
log = "0.4"
nalgebra = "0.33"
anyhow = "1.0"
arboard = { version = "3.4", features = ["wayland-data-control"] }
clap = "3.2" # DO NOT UPDATE unless you test extensively on mac. This will break the mac app.
dirs = "6.0"
egui-modal = {path = "egui-modal-diag"}

[features]
default = [
    "turbo",
    "avif_native",
    "update",
    "notan/shaderc",
    "j2k",
    "jxlcms",
]
heif = ["libheif-rs"]
avif_native = ["avif-decode"]
dav1d = ["libavif-image"]
file_open = ["rfd"]
turbo = ["turbojpeg"]
update = ["self_update"]
j2k = ["jpeg2k"]
jxlcms = ["jxl-oxide/lcms2"]
hdr = []
lang_support = []
notan_glsl-to-spirv = ["notan/glsl-to-spirv"]

[target.'cfg(target_os = "macos")'.dependencies]
fruitbasket = "0.10.0"

[target.'cfg(windows)'.build-dependencies]
# this currently causes a link error LNK1356, check in the future if the problem was solved
windres = "0.2"

[build-dependencies]
env_logger = "0.11"
log = "0.4.14"
winres = "0.1"
cc = "1.0.46"
cmake = "0.1"

[dev-dependencies]
cmd_lib = "1.3.0"
xmltree = "0.11.0"
chrono = "0.4.38"
criterion = { version = "0.5.1", features = ["html_reports", "stable"] }

[profile.release]
opt-level = 3
lto = "fat"
debug = false
strip = true
codegen-units = 1
# panic = "abort"

[profile.dev]
debug = false
opt-level = 2
lto = false
codegen-units = 64


[[bench]]
name = "my_benchmark"
harness = false
